--- a/_sass/includes/_social_links.scss
+++ b/_sass/includes/_social_links.scss
@@ -6,6 +6,7 @@
     padding: 0;
     color: $color-6;
     transition-duration: .3s;
+    font-size: .6em;
     &:hover {
       // color: $color-3;
       transform: scale(1.1,1.1);
@@ -13,8 +14,8 @@
       transition-duration: .3s;
     }
     img {
-      margin: 0px 0 0 -5px;
-      height: 55px;
+      margin: 5px 0 0 0;
+      height: 35px;
       transition-duration: .3s;
       &:hover {
         // opacity: 0.5;
@@ -25,3 +26,25 @@
     }
   }
 }
+
+@media (orientation: landscape) {}
+@media (orientation: portrait) {}
+
+@media only screen and (min-width: 576px) {
+  .social-links {
+    a {
+      font-size: .85em;
+      img {height: 45px;}
+    }
+  }
+}
+@media only screen and (min-width: 768px) {
+  .social-links {
+    a {
+      font-size: 1.1em;
+      img {height: 55px;}
+    }
+  }
+}
+@media only screen and (min-width: 922px) {}
+@media only screen and (min-width: 1200px) {}
