--- a/_sass/primary.scss
+++ b/_sass/primary.scss
@@ -486,6 +486,7 @@ strong, em {font-weight: 700;}
 		background-color: rgba($color-6, .7);
 		border: 1px solid rgba($color-4, .5);
 		max-width: 75%;
+		pointer-events: none;
 	}
 	.link-icon {
 		background-color: rgba($color-6, .7);
@@ -500,6 +501,7 @@ strong, em {font-weight: 700;}
 		color: rgba($color-4, .5);
 		// text-shadow: 0 0 10px $color-3;
 		svg {display: block;}
+		pointer-events: none;
 	}
 }
 .modalBtn-exLabel {display: none;}
